# django-image-manipulation-webapp

./: .env  .env.docker  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt
api/: admin.py  models.py  urls.py  utils.py
api/migrations/: 0001_initial.py  0002_alter_transformedimage_transformed_file.py
api/serializers/: __init__.py  helpers.py  image_serializer.py  transformation_request_serializer.py  transformed_image_serializer.py  upload_serializer.py
api/utils/: __init__.py  generic.py  helpers.py  serializer_helpers.py
api/views/: __init__.py  image.py  transform.py  transformation_request.py  transformed_image.py  upload.py
bcgdv_progimage/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_bcgdv_progimage.py  test_image_transformation.py  test_local_upload.py  test_remote_upload.py
